force-app/main/default/objects/Agent_Roster__c/Agent_Roster__c.object-meta.xml
<CustomObject>
    <label>Agent Roaster</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Roster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Roasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>