force-app/main/default/objects/Agent_Roster__c/fields/Login_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Login_Active_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Active Status</label>
    <type>Checkbox</type>
</CustomField>