force-app/main/default/objects/Agent_Roster__c/fields/Reporting_Time__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Time__c</fullName>
    <label>Reporting Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>