force-app/main/default/objects/Agent_Roster__c/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin</label>
    <referenceTo>Round_Robin__c</referenceTo>
    <relationshipName>Leave_Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>