force-app/main/default/objects/Agent_Roster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Apply_Date__c</columns>
    <columns>Login_Active_Status__c</columns>
    <columns>Reporting_Time__c</columns>
    <columns>Round_Robin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>